--- a/app/src/main/res/layout/activity_dms.xml
+++ b/app/src/main/res/layout/activity_dms.xml
@@ -1,117 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#FFFFFF">
 
-    <LinearLayout
-        android:id="@+id/topBar"
-        android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:orientation="horizontal"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:gravity="center_vertical">
+    <ImageView
+        android:id="@+id/back"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/left_chev"
+        app:tint="@color/smd_theme" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|start">
-
-            <ImageView
-                android:id="@+id/back"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/left_chev"
-                app:tint="@color/smd_theme" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/titleWrap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/jacob_w"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="#7B3B3B"/>
-
-            <ImageView
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginStart="4dp"
-                android:src="@drawable/chev_down"
-                app:tint="@color/smd_theme" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end">
-
-            <ImageView
-                android:id="@+id/newMsg"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/Plus"
-                app:tint="@color/smd_theme" />
-        </LinearLayout>
-    </LinearLayout>
-
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="14dp"
+        android:text="@string/jacob_w"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textColor="#7B3B3B"/>
 
+    <ImageView
+        android:id="@+id/titleChevron"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_toRightOf="@id/title"
+        android:layout_marginStart="8dp"
+        android:src="@drawable/chev_down"
+        app:tint="@color/smd_theme"
+        android:layout_above="@+id/search"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="8dp"/>
+
+    <ImageView
+        android:id="@+id/newMsg"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/Plus"
+
+
+        app:tint="@color/smd_theme" />
 
     <EditText
-        android:layout_below="@id/topBar"
-
         android:id="@+id/search"
         android:layout_width="match_parent"
-        android:layout_marginLeft="35dp"
-        android:layout_marginRight="35dp"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_toStartOf="@id/scan"
-        android:layout_marginEnd="12dp"
+        android:layout_below="@id/title"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/acc_bar"
         android:hint="@string/search"
         android:textColorHint="#7A7171"
         android:paddingStart="12dp"
         android:paddingEnd="100dp"
         android:drawableStart="@drawable/search"
-        android:drawableTint="#494545"
         android:drawablePadding="8dp"
-        android:inputType="text"
-        tools:ignore="NotSibling" />
-
-    </RelativeLayout>
+        android:inputType="text"/>
 
     <ScrollView
         android:id="@+id/listScroll"
         android:layout_width="match_parent"
+        android:layout_marginTop="15dp"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_below="@id/search"
+        android:layout_above="@+id/cameraBar">
 
         <LinearLayout
             android:id="@+id/listCol"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginTop="10dp">
+            android:paddingTop="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -125,10 +96,8 @@
                     android:id="@+id/icon1"
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_centerVertical="true"
                     android:background="@drawable/hash_circle"
                     android:src="@drawable/person1"
-                    android:layout_gravity="center"
                     android:clipToOutline="true"
                     android:scaleType="centerCrop"/>
 
@@ -188,12 +157,10 @@
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_centerVertical="true"
                     android:background="@drawable/hash_circle"
                     android:src="@drawable/person1"
-                    android:layout_gravity="center"
                     android:clipToOutline="true"
-                    android:scaleType="centerCrop"/>/>
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -251,12 +218,10 @@
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_centerVertical="true"
                     android:background="@drawable/hash_circle"
                     android:src="@drawable/person1"
-                    android:layout_gravity="center"
                     android:clipToOutline="true"
-                    android:scaleType="centerCrop"/>/>
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -314,12 +279,10 @@
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_centerVertical="true"
                     android:background="@drawable/hash_circle"
                     android:src="@drawable/person1"
-                    android:layout_gravity="center"
                     android:clipToOutline="true"
-                    android:scaleType="centerCrop"/>/>
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -377,12 +340,10 @@
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_centerVertical="true"
                     android:background="@drawable/hash_circle"
                     android:src="@drawable/person1"
-                    android:layout_gravity="center"
                     android:clipToOutline="true"
-                    android:scaleType="centerCrop"/>/>
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -435,17 +396,16 @@
                 android:orientation="horizontal"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                android:gravity="center_vertical">
+                android:gravity="center_vertical"
+                android:layout_marginBottom="12dp">
 
                 <ImageView
                     android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_centerVertical="true"
                     android:background="@drawable/hash_circle"
                     android:src="@drawable/person1"
-                    android:layout_gravity="center"
                     android:clipToOutline="true"
-                    android:scaleType="centerCrop"/>/>
+                    android:scaleType="centerCrop"/>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -499,6 +459,7 @@
         android:id="@+id/cameraBar"
         android:layout_width="match_parent"
         android:layout_height="96dp"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:gravity="center_horizontal">
 
@@ -510,13 +471,13 @@
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingStart="12dp"
-            android:paddingEnd="12dp">
+            android:paddingEnd="12dp"
+            >
 
             <ImageView
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:src="@drawable/cam"
-                android:backgroundTintMode="multiply"
                 app:tint="@color/smd_theme" />
 
             <TextView
@@ -525,12 +486,8 @@
                 android:layout_marginStart="8dp"
                 android:text="Camera"
                 android:textColor="@color/black"
-                android:fontFamily="@font/instagram_sans_medium"
                 android:textSize="14sp"/>
         </LinearLayout>
-
-
-
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
