--- a/app/src/main/res/layout/activity_specific_search.xml
+++ b/app/src/main/res/layout/activity_specific_search.xml
@@ -135,12 +135,19 @@
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp">
 
-                <ImageView
+                <TextView
                     android:id="@+id/icon1"
                     android:layout_width="44dp"
                     android:layout_height="44dp"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/hash_circle"/>
+                    android:layout_marginTop="10dp"
+                    android:gravity="center"
+                    android:text="IS"
+                    android:background="@drawable/circular_background"
+                    android:backgroundTint="#03A9F4"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
